# taniguchi-2021-analysis

./: .gitignore  README.md  configure  pyproject.toml  startup.py
.devcontainer/: devcontainer.json
notes/2020-02-26/: PJ020941.3_CO43.ipynb  PJ020941.3_CO54.ipynb  analysis-PJ020941.3-CO43.ipynb  analysis-PJ020941.3-CO54.ipynb
notes/2020-04-27/: figure-LS-decomposition-viridis.ipynb  figure-LS-decomposition.ipynb  lowrank_sparse_decomposition.ipynb
notes/2020-05-07/: analysis-PJ020941.3-CO43.ipynb  analysis-PJ020941.3-CO54.ipynb
notes/2021-05-24/: analysis-PJ020941.3-CO43.ipynb  analysis-PJ020941.3-CO54.ipynb
taniguchi_2021_analysis/: __init__.py  io.py  models.py
taniguchi_2021_analysis/b4r/: models.py
tools/b4r/: __init__.py  models.py
