[tool.poetry]
name = "reform-analysis"
version = "0.1.0"
description = "Data analysis for the Re:form project"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
astropy = "^4.0"
numpy = "^1.18"
scipy = "^1.4"
xarray = "^0.15"
pandas = "^1.0"
jupyter-io = "^0.2"
matplotlib = "^3.1"
scikit-learn = "^0.22"
scikit-image = "^0.16"
netcdf4 = "^1.5"
tqdm = "^4.43"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7"
ipython = "^7.11"
jupyter = "^1.0"
jupyterlab = "^1.2"
pytest = "^5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
