[tool.poetry]
name = "taniguchi-2021-analysis"
version = "0.1.0"
description = "Analysis repository for Taniguchi et al. 2021, AJ, 162, 111"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
astropy = "^5.0"
numpy = "^1.21"
pandas = "^1.3"
scikit-learn = "^1.0"
scipy = "^1.7"
tqdm = "^4.62"
xarray = "^0.20"

[tool.poetry.dev-dependencies]
black = "^21.12b"
ipykernel = "^6.6"
ipython = "^7.30"
jupyter-io = "^0.2"
matplotlib = "^3.5"
netcdf4 = "^1.5"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"
