[tool.poetry]
name = "taniguchi-2021-analysis"
version = "0.1.0"
description = "Analysis repository for Taniguchi et al. 2021, AJ, 162, 111"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
homepage = "https://github.com/astropenguin/taniguchi-2021-analysis/"
keywords = [
    "astronomy",
    "paper",
    "methods",
    "radio-astronomy",
    "spectroscopy",
    "single-dish",
    "matrix-decomposition",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
astropy = ">5.3, <7.0"
numpy = "^1.25"
pandas = ">=1.5, <3.0"
scikit-learn = "^1.2"
scipy = "^1.11"
tqdm = "^4.66"
xarray = ">=2023.7, <2025.0"

[tool.poetry.dev-dependencies]
black = "^24.2"
ipython = "^8.18"
jupyter = "^1.0"
matplotlib = "^3.7"
netcdf4 = "^1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
